--- a/lib/streamaze_web/templates/payment/index.html.heex
+++ b/lib/streamaze_web/templates/payment/index.html.heex
@@ -10,6 +10,20 @@
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">You are subscribed! 🎉</h5>
         <p class="font-normal text-gray-700 dark:text-gray-400">You can manage your subscription through your PayPal dashboard.</p>
     </div>
+
+    <div class="flex items-center p-4 mb-4 text-sm text-blue-800 border border-blue-300 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400 dark:border-blue-800" role="alert">
+        <span class="sr-only">Info</span>
+        <div>
+            <span class="font-bold">What now?</span>
+            <ol>
+                <li>1. Go to your <a href="https://my.streamerdash.com/account/settings" class="underline">account settings</a> to copy your Streamaze Key.</li>
+                <li>2. Use your key to sign in to <a href="https://streamerdash.com/" class="underline">the dashboard</a>.</li>
+                <li>3. Configure your dashboard from the sidebar.</li>
+            </ol>
+            <br />
+            For more assistance, please <a href="https://docs.streamerdash.com/" target="_blank" class="underline">read this guide.</a>
+        </div>
+    </div>
     <% else %>
     <div class="max-w-sm">
         <div id="paypal-button-container-P-8046699486893250KMVMROZY"></div>
@@ -53,7 +67,9 @@
                     });
                 });
             },
-            onApprove: function(_data, _actions) {}
+            onApprove: function(_data, _actions) {
+                alert('You have subscribed! Payments are usually processed in 1 or 2 minutes.');
+            }
         }).render('#paypal-button-container-P-8046699486893250KMVMROZY'); // Renders the PayPal button
         </script>
     </div>
