--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -125,12 +125,12 @@
               >
                 <li>
                   <%= link to: "/account/profile", class: "block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white" do %>
-                    My profile
+                    Profile
                   <% end %>
                 </li>
                 <li>
                   <%= link to: "/account/settings", class: "block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white" do %>
-                    Account settings
+                    Account Settings
                   <% end %>
                 </li>
               </ul>
