--- a/lib/streamaze_web/templates/user_settings/edit.html.heex
+++ b/lib/streamaze_web/templates/user_settings/edit.html.heex
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-6">
   <div>
-    <h1 class="text-4xl font-bold mb-2">My Account</h1>
+    <h1 class="text-4xl font-bold mb-2">Account Settings</h1>
 
     <p class="mb-4 font-medium text-gray-400">Here you can view and edit and view your profile.</p>
   </div>
