--- a/lib/streamaze_web/templates/user_confirmation/new.html.heex
+++ b/lib/streamaze_web/templates/user_confirmation/new.html.heex
@@ -1,4 +1,4 @@
-<h1>Resend confirmation instructions</h1>
+<h5 class="text-xl font-medium text-gray-900 dark:text-white">Resend Confirmation</h5>
 
 <.form let={f} for={:user} action={Routes.user_confirmation_path(@conn, :create)}>
   <%= label f, :email %>
@@ -8,8 +8,3 @@
     <%= submit "Resend confirmation instructions" %>
   </div>
 </.form>
-
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
