Update URLs to .xyz

--- a/lib/streamaze_web/live/widgets_live/index.html.heex
+++ b/lib/streamaze_web/live/widgets_live/index.html.heex
@@ -2,7 +2,7 @@
     <h1 class="text-4xl font-bold">Widgets</h1>
 
     <p class="mb-6 font-medium text-gray-400">
-        Learn how to use our OBS widgets to overlay stream info <%= link to: "https://docs.streamaze.live/widgets", class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" do %>here<% end %>.
+        Learn how to use our OBS widgets to overlay stream info <%= link to: "https://guide.streamaze.xyz/widgets", class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" do %>here<% end %>.
     </p>
 
     <.form let={f} for={@form}>
